# api/docs/swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.3",
   "info": {
-    "title": "Auth Restful API",
+    "title": "Restful API",
     "description": "Documentation",
     "version": "1.0.0"
   },
@@ -301,6 +301,199 @@
         "security": [
           {
             "RefreshToken": []
+          }
+        ]
+      }
+    },
+    "/job-positions": {
+      "get": {
+        "tags": ["job-positions"],
+        "summary": "Get All Job Positions",
+        "description": "",
+        "parameters": [
+          {
+            "required": true,
+            "schema": {
+              "title": "Page",
+              "exclusiveMinimum": 0,
+              "type": "integer"
+            },
+            "name": "page",
+            "in": "query"
+          },
+          {
+            "required": true,
+            "schema": {
+              "title": "Per Page",
+              "exclusiveMinimum": 0,
+              "type": "integer"
+            },
+            "name": "per_page",
+            "in": "query"
+          },
+          {
+            "required": false,
+            "schema": {
+              "title": "Description",
+              "minLength": 1,
+              "type": "string"
+            },
+            "name": "description",
+            "in": "query"
+          },
+          {
+            "required": false,
+            "schema": {
+              "title": "Location",
+              "minLength": 1,
+              "type": "string"
+            },
+            "name": "location",
+            "in": "query"
+          },
+          {
+            "required": false,
+            "schema": {
+              "title": "full_time",
+              "type": "boolean"
+            },
+            "name": "full_time",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Request Success.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schema/ExampleResponse"
+                },
+                "example": {
+                  "status_code": 200,
+                  "status": true,
+                  "message": "Request Success.",
+                  "detail_message": null,
+                  "results": {
+                    "data": [
+                      {
+                      }
+                    ],
+                    "total": 0,
+                    "next_num": null,
+                    "prev_num": null,
+                    "page": 1,
+                    "iter_pages": []
+                  }
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Unprocessable Entity.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schema/ExampleResponse"
+                },
+                "example": {
+                  "status_code": 422,
+                  "status": false,
+                  "message": "Unprocessable Entity.",
+                  "detail_message": {
+                    "_body": "Invalid input type."
+                  },
+                  "data": null
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "AccessToken": []
+          }
+        ]
+      }
+    },
+    "/job-positions/{job_position_id}": {
+      "get": {
+        "tags": ["job-positions"],
+        "summary": "Get Job Position By Id",
+        "description": "",
+        "parameters": [
+          {
+            "required": true,
+            "schema": {
+              "title": "Job Position Id",
+              "minLength": 0,
+              "type": "string"
+            },
+            "name": "job_position_id",
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Request Success.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schema/ExampleResponse"
+                },
+                "example": {
+                  "status_code": 200,
+                  "status": true,
+                  "message": "Request Success.",
+                  "detail_message": null,
+                  "results": {
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Resource Not Found.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schema/ExampleResponse"
+                },
+                "example": {
+                  "status_code": 404,
+                  "status": false,
+                  "message": "Resource Not Found.",
+                  "detail_message": {
+                    "_app": "job position not found."
+                  },
+                  "results": null
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Unprocessable Entity.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schema/ExampleResponse"
+                },
+                "example": {
+                  "status_code": 422,
+                  "status": false,
+                  "message": "Unprocessable Entity.",
+                  "detail_message": {
+                    "_body": "Invalid input type."
+                  },
+                  "data": null
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "AccessToken": []
           }
         ]
       }
